--- a/docs/en/01.introduction/02.configuration.md
+++ b/docs/en/01.introduction/02.configuration.md
@@ -1,11 +1,8 @@
-## Introduction[](#introduction)
+---
+title: Configuration
+---
 
-`anomaly.field_type.select`
-
-The select field type provides dropdown options input.
-
-
-### Configuration[](#introduction/configuration)
+### Configuration
 
 Below is the full configuration available with defaults values:
 
@@ -131,8 +128,7 @@ The option handler. You may also specify `years`, `countries`, `states`, `layout
 
 </table>
 
-
-#### Option Groups[](#introduction/configuration/option-groups)
+#### Option Groups
 
 Select options can be organized into `groups` by nesting the options into keyed groups. The `key` is translated as the group's label.
 
@@ -146,8 +142,7 @@ Select options can be organized into `groups` by nesting the options into keyed 
         ],
     ]
 
-
-#### Option Handlers[](#introduction/configuration/option-handlers)
+#### Option Handlers
 
 Option handlers are responsible for setting the available options on the field type. You can define your own option handler to add your own logic to available options.
 
@@ -172,8 +167,7 @@ Option handlers can also a handler with a closure:
 
 <div class="alert alert-info">**Remember:** Closures can not be stored in the database so your closure type handlers must be set / overridden from the form builder.</div>
 
-
-##### Writing Option Handlers[](#introduction/configuration/option-handlers/writing-option-handlers)
+##### Writing Option Handlers
 
 Writing custom option handlers is easy. To begin create a class with the method you defined in the config option.
 
