--- a/docs/en/02.usage/04.presentation-output.md
+++ b/docs/en/02.usage/04.presentation-output.md
@@ -1,28 +1,12 @@
-## Usage[](#usage)
+---
+title: Presenter Output
+---
 
-This section will show you how to use the field type via API and in the view layer.
-
-
-### Setting Values[](#usage/setting-values)
-
-You must set the value with a key from the available options:
-
-    $entry->example = "foo";
-
-
-### Basic Output[](#usage/basic-output)
-
-The addon field type returns the values option key.
-
-    $entry->example; // foo
-
-
-### Presenter Output[](#usage/presenter-output)
+### Presenter Output
 
 This section will show you how to use the decorated value provided by the `\Anomaly\SelectFieldType\SelectFieldTypePresenter` class.
 
-
-#### SelectFieldTypePresenter::key()[](#usage/presenter-output/selectfieldtypepresenter-key)
+#### SelectFieldTypePresenter::key()
 
 The `key` method returns the selected value's key.
 
@@ -36,8 +20,7 @@ The `key` method returns the selected value's key.
 
     {{ decorated.example.key() }}
 
-
-#### SelectFieldTypePresenter::value()[](#usage/presenter-output/selectfieldtypepresenter-value)
+#### SelectFieldTypePresenter::value()
 
 The `value` method returns the selected value.
 
@@ -51,8 +34,7 @@ The `value` method returns the selected value.
 
     {{ decorated.example.value() }}
 
-
-#### SelectFieldTypePresenter::currency()[](#usage/presenter-output/selectfieldtypepresenter-currency)
+#### SelectFieldTypePresenter::currency()
 
 The `currency` method returns the currency definition for the selected value when using the `currency` handler.
 
