--- a/docs/en/01.introduction/02.configuration.md
+++ b/docs/en/01.introduction/02.configuration.md
@@ -11,6 +11,7 @@ Below is the full configuration available with defaults values:
         "config" => [
             "options"       => [],
             "default_value" => null,
+            "button_type"   => "info",
             "mode"          => "dropdown",
             "handler"       => "Anomaly\SelectFieldType\SelectFieldTypeOptions@handle"
         ]
@@ -96,7 +97,29 @@ radio
 
 <td>
 
-The input mode. Valid options are `dropdown`, `search`, and `radio`.
+The input mode. Valid options are `dropdown`, `search`, `buttons`, and `radio`.
+
+</td>
+
+</tr>
+
+<tr>
+
+<td>
+
+button_type
+
+</td>
+
+<td>
+
+primary
+
+</td>
+
+<td>
+
+The button type if using button mode.
 
 </td>
 
