--- a/docs/en/01.introduction/02.configuration.md
+++ b/docs/en/01.introduction/02.configuration.md
@@ -141,7 +141,7 @@ handler
 
 <td>
 
-The option handler. You may also specify `years`, `countries`, `states`, `layouts`, `timezones`, or `currencies` to use alternate built-in handlers.
+The option handler. You may also specify `months`, ``years`, `countries`, `states`, `layouts`, `timezones`, or `currencies` to use alternate built-in handlers.
 
 </td>
 
