--- a/docs/en/01.introduction/02.configuration.md
+++ b/docs/en/01.introduction/02.configuration.md
@@ -12,8 +12,8 @@ Below is the full configuration available with defaults values:
             "options"       => [],
             "default_value" => null,
             "button_type"   => "info",
+            "handler"       => "options"
             "mode"          => "dropdown",
-            "handler"       => "Anomaly\SelectFieldType\SelectFieldTypeOptions@handle"
         ]
     ]
 
