--- a/docs/en/01.introduction/02.configuration.md
+++ b/docs/en/01.introduction/02.configuration.md
@@ -10,6 +10,7 @@ Below is the full configuration available with defaults values:
         "type"   => "anomaly.field_type.select",
         "config" => [
             "options"       => [],
+            "selector"      => ":",
             "default_value" => null,
             "button_type"   => "info",
             "handler"       => "options"
@@ -54,6 +55,28 @@ options
 <td>
 
 The option array. Values may optionally be non-keyed.
+
+</td>
+
+</tr>
+
+<tr>
+
+<td>
+
+selector
+
+</td>
+
+<td>
+
+`|`
+
+</td>
+
+<td>
+
+A custom separator character. Defaults to ":".
 
 </td>
 
