--- a/docs/en/01.introduction/02.configuration.md
+++ b/docs/en/01.introduction/02.configuration.md
@@ -76,7 +76,7 @@ selector
 
 <td>
 
-A custom separator character. Defaults to ":".
+A custom key:value separator character. Defaults to ":".
 
 </td>
 
