--- a/docs/en/01.introduction/02.configuration.md
+++ b/docs/en/01.introduction/02.configuration.md
@@ -10,7 +10,7 @@ Below is the full configuration available with defaults values:
         "type"   => "anomaly.field_type.select",
         "config" => [
             "options"       => [],
-            "selector"      => ":",
+            "separator"     => ":",
             "default_value" => null,
             "button_type"   => "info",
             "handler"       => "options"
