Missing a comma in the code example

--- a/docs/en/01.introduction/02.configuration.md
+++ b/docs/en/01.introduction/02.configuration.md
@@ -13,7 +13,7 @@ Below is the full configuration available with defaults values:
             "separator"     => ":",
             "default_value" => null,
             "button_type"   => "info",
-            "handler"       => "options"
+            "handler"       => "options",
             "mode"          => "dropdown",
         ]
     ]
